--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
-  ]
+    "dist",
+    "README.md"
+  ],
+  "dependencies": {
+    "ethers": "^5.7.2"
+  }
 }
