--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Amet-Finance/utils"
+  },
   "keywords": [],
-  "author": "",
+  "author": "The Unconstrained Mind(unconstrained@amet.finance)",
   "license": "ISC",
   "dependencies": {
     "ethers": "^5.7.2"
